fix userId issue